[package]
authors = ["Henrik Rydgård <hrydgard@gmail.com>"]
edition = "2024"
name = "langtool"
version = "0.1.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"